# DropDL

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml
.github/workflows/: ci.yml
backend/: .env.backend.railway  Dockerfile  manage.py  pyproject.toml
backend/downloads/: admin.py  models.py  serializers.py  services.py  test_views.py  urls.py  views.py
backend/downloads/migrations/: 0001_initial.py  0002_add_description_to_download.py  0003_alter_download_duration.py  0004_alter_download_options_and_more.py
backend/dropdl/: production_settings.py  settings.py  urls.py  wsgi.py
frontend/: .env.frontend.railway  index.html  package-lock.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/ErrorBoundary/: ErrorBoundary.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/OptionsPanel/: OptionsPanel.tsx
frontend/src/components/ProtectedRoute/: ProtectedRoute.tsx
frontend/src/components/SiteBanner/: SiteBanner.tsx
frontend/src/components/UrlInputBar/: UrlInputBar.tsx
frontend/src/components/VideoInfoCard/: VideoInfoCard.tsx
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/hooks/: useDownload.ts  useHistory.ts  useVideoInfo.ts
frontend/src/pages/Download/: DownloadPage.tsx
frontend/src/pages/History/: HistoryPage.tsx
frontend/src/pages/Home/: HomePage.tsx
frontend/src/pages/Login/: LoginPage.tsx
frontend/src/utils/: formatters.ts
